# django_unused_model_inspector

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
django_unused_model_inspector/: __init__.py  analyzer.py  apps.py  collectors.py  references.py  reporting.py  runtime.py  settings.py
django_unused_model_inspector/management/commands/: detect_unused_model_members.py
tests/: conftest.py  runtime_evidence_sample.json  test_analyzer.py
tests/test_project/: settings.py
tests/test_project/testapp/: admin.py  apps.py  models.py  serializers.py  usage.py
tests/test_project/testapp/templates/testapp/: customer_detail.html
