[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-unused-model-inspector"
version = "0.1.1"
description = "Detect potentially unused Django model fields and methods."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  {name = "Abdou SEYE"}
]
dependencies = [
  "Django>=3.2"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: Django",
  "Framework :: Django :: 3.2",
  "Framework :: Django :: 4.2",
  "Framework :: Django :: 5",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Quality Assurance"
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-django>=4.8",
  "ruff>=0.5"
]

[project.urls]
Homepage = "https://github.com/abduRahman49/django_unused_model_inspector"

[tool.setuptools.packages.find]
include = ["django_unused_model_inspector*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"
